# financial-transaction-anomaly-detection-reporting

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
src/financial_anomaly_detection/: __init__.py  anomaly_detection.py  config.py  data_ingestion.py  pipeline.py  pipeline_cli.py  preprocessing.py
src/financial_anomaly_detection/reporting/: __init__.py  excel_report.py  pdf_report.py
tests/: test_anomaly_detection.py
